[tool.poetry]
name = "python-web-home-work-5"
version = "0.1.0"
description = ""
authors = ["Alexey-Goryachev <goryachev.alex00@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_home_work_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
websockets = "^11.0.3"
names = "^0.3.0"
aiopath = "^0.6.11"
aiofile = "^3.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
